Fixed bug regarding scrolling to current hour on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,10 @@ body {
     color: $ea-deep-purple;
   }
 }
+
+@media (max-width: 599px) {
+
+  .mat-tab-group {
+    height: calc(100vh - #{$ea-toolbar-height-mobile});
+  }
+}
